@@ -3,9 +3,12 @@
 # (can be adapted to test alternative re-implemations even while they are developed
 # write a *Envl class and change/add to to_test for that)
 
+import sys
 import unittest
 
 import java
+from java.util import ArrayList
+from javatests import JOverload, Reflection
 from org.python.core import PyReflectedFunction
 
 class PyReflFuncEnvl:
@@ -25,7 +28,6 @@ def extract_ov_meths(jcl,envl_class):
             meth_dict[name] = envl_class(name,[ m for m in meths if m.name == name ])
     return meth_dict
 
-from javatests import JOverload
 jo = JOverload()
 
 to_test = [extract_ov_meths(JOverload,PyReflFuncEnvl)]
@@ -119,11 +121,55 @@ class OverloadedDispatchTests(unittest.TestCase):
                    """)
 
 
+class VarargsDispatchTests(unittest.TestCase):
+
+    def test_strings(self):
+        t = Reflection.StringVarargs()
+        self.assertEqual(t.test("abc", "xyz"),
+                         "String...:[abc, xyz]")
+        self.assertEqual(t.test("abc"),
+                         "String...:[abc]")
+        self.assertEqual(t.test(),
+                         "String...:[]")
+
+        self.assertEqual(t.test(["abc", "xyz"]),
+                         "String...:[abc, xyz]")
+        self.assertEqual(t.test(["abc"]),
+                         "String...:[abc]")
+        self.assertEqual(t.test([]),
+                         "String...:[]")
+
+
+    def test_lists(self):
+        t = Reflection.ListVarargs()
+        self.assertEqual(t.test(ArrayList([1,2,3]), ArrayList([4,5,6])),
+                         "List...:[[1, 2, 3], [4, 5, 6]]")
+        self.assertEqual(t.test(ArrayList([1,2,3])),
+                         "List...:[[1, 2, 3]]")
+        self.assertEqual(t.test(),
+                         "List...:[]")
+
+        self.assertEqual(t.test([ArrayList([1,2,3]), ArrayList([4,5,6])]),
+                         "List...:[[1, 2, 3], [4, 5, 6]]")
+        self.assertEqual(t.test([ArrayList([1,2,3])]),
+                         "List...:[[1, 2, 3]]")
+        self.assertEqual(t.test([]),
+                         "List...:[]")
+
+
+class ComplexOverloadingTests(unittest.TestCase):
+
+    def test_complex(self):
+        o = Reflection.Overloaded()
+        self.assertEqual(o(2.), "class java.lang.Double=2.0")
+        self.assertEqual(o(1+2j), "class org.python.core.PyComplex=(1+2j)")
+
+
+
 def printout(meth_dict,lbl,rng,args):
     for i in rng:
         print meth_dict['ov_%s%s' % (lbl,i)](jo,args)
 
-import sys
 
 if __name__ == '__main__' and not sys.argv[1:] == ['break-out']:
     try:
@@ -131,4 +177,4 @@ if __name__ == '__main__' and not sys.argv[1:] == ['break-out']:
     except ImportError:
         unittest.main()
     else:
-        test_support.run_unittest(OverloadedDispatchTests)
+        test_support.run_unittest(OverloadedDispatchTests, VarargsDispatchTests, ComplexOverloadingTests)
